task-2 form position fix

--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -3,7 +3,9 @@
 .feedback-form {
     display: flex;
     flex-direction: column;
-
+    max-width: 408px;
+    margin: 24px auto;
+    padding: 24px;
 }
 
 .feedback-form label {
